    - removed property "maximumPayrollAmount"
    - capitalized enum values of property "DSBCalculationBasis"
    - changed type of property "DSBBenefitPeriod" from object to enum
- DSBPersonGroupsType (Changed)
    - renamed property "maximumPayrollAmount" to "maxSalary"
    - removed property "averageAgePersonGroup"
    - added property "averageAgeMale"
    - added property "averageAgeFemale"
- DSBPersonType (Changed)
    - renamed property "premiumFixedPayroll" to "premiumPersonMentionedByName"
    - dereferenced type of "premiumPersonMentionedByName"
    - added properties "netPremiumDSBPercentage", "netPremiumDSBAmount", "premiumMinimumAmount" to "premiumPersonMentionedByName"
    - removed properties "netPremiumDSBMalePercentage", "netPremiumDSBMaleAmount", "netPremiumDSBFemalePercentage", "netPremiumDSBFemaleAmount" from "premiumPersonMentionedByName"
    - properties "netPremiumDSBMPercentage", "netPremiumDSBPPercentage" are now optional
- DSBPremiumType (Changed)
    - added property "premiumMinimumAmount"
- InsuranceOptionsBenefitPeriodType (Removed)
- InsuranceOptionsBenefitScopeType (Removed)
- InsuranceOptionsEmployeesType (Removed)
- InsuranceOptionsVariousType (Changed)
    - properties "premiumRateGuaranty", "renunciationTerminationRightClaim", "annualCancellation", "surplusParticipation" are now optional
- MedicalExpensesHospitalType (Added)
- OfferCustomerType (Changed)
    - NOGACodeMain is now optional
    - Added property "SUVACompany"
- OfferDSBType (Changed)
    - renamed property "fixedPayrolls" to "personMentionedByName"
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
    - all properties of "insuranceOptions" are mandatory
    - added property "premiumOverviewDSB"
- OfferNlpiConclusionDecisionDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
- OfferNlpiDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion